--- a/zy-frame/src/main/res/values/colors.xml
+++ b/zy-frame/src/main/res/values/colors.xml
@@ -8,4 +8,70 @@
     <color name="ZYFrame_loading_dialog_bg">@color/ZYFrame_white</color>
     <color name="ZYFrame_loading_dialog_message">#595959</color>
 
+    <color name="black">#000000</color>
+    <color name="blue">#00B7EE</color>
+    <color name="blue_40">#75CBDC</color>
+    <color name="gray">#333333</color>
+    <color name="gray_10">#FCFCFC</color>
+    <color name="gray_100">#6C6C6C</color>
+    <color name="gray_110">#5B5B5B</color>
+    <color name="gray_120">#4F4F4F</color>
+    <color name="gray_130">#3C3C3C</color>
+    <color name="gray_140">#272727</color>
+    <color name="gray_20">#F0F0F0</color>
+    <color name="gray_30">#E0E0E0</color>
+    <color name="gray_40">#d0d0d0</color>
+    <color name="gray_50">#BEBEBE</color>
+    <color name="gray_60">#ADADAD</color>
+    <color name="gray_70">#9D9D9D</color>
+    <color name="gray_80">#8E8E8E</color>
+    <color name="gray_90">#7B7B7B</color>
+    <color name="green">#00E266</color>
+    <color name="holo_blue_bright">#ff00ddff</color>
+    <color name="holo_blue_dark">#ff0099cc</color>
+    <color name="holo_blue_light">#ff33b5e5</color>
+    <color name="holo_gray_bright">#33CCCCCC</color>
+    <color name="holo_gray_light">#33999999</color>
+    <color name="holo_green_dark">#ff669900</color>
+    <color name="holo_green_light">#ff99cc00</color>
+    <color name="holo_orange_dark">#ffff8800</color>
+    <color name="holo_orange_light">#ffffbb33</color>
+    <color name="holo_purple">#ffaa66cc</color>
+    <color name="holo_red_dark">#ffcc0000</color>
+    <color name="holo_red_light">#ffff4444</color>
+    <color name="orange">#C63D00</color>
+    <color name="orange_40">#F8DD75</color>
+    <color name="orange_60">#ECAE59</color>
+    <color name="orange_80">#E14906</color>
+    <color name="orange_bg">#EE6100</color>
+    <color name="orange_button">#FD990F</color>
+    <color name="orange_little">#EC7F49</color>
+    <color name="picker_black">#000</color>
+    <color name="picker_colorAccent">#FF4081</color>
+    <color name="picker_colorPrimary">#000000</color>
+    <color name="picker_colorPrimaryAlpha">#44000000</color>
+    <color name="picker_colorPrimaryDark">#ff212121</color>
+    <color name="picker_width">#FFFFFF</color>
+    <color name="pink">#E43080</color>
+    <color name="red_80">#C31D42</color>
+    <color name="tab_color">#F47645</color>
+    <color name="titleBarColor">#4CB59B</color>
+    <color name="translucent_100">#00000000</color>
+    <color name="translucent_20_black">#33000000</color>
+    <color name="translucent_20_blue">#330375dc</color>
+    <color name="translucent_20_pink">#33E43080</color>
+    <color name="translucent_20_white">#33ffffff</color>
+    <color name="translucent_30_black">#4c000000</color>
+    <color name="translucent_40_blue">#660375dc</color>
+    <color name="translucent_50_black">#7f000000</color>
+    <color name="translucent_50_white">#7fffffff</color>
+    <color name="translucent_60_blue">#990375dc</color>
+    <color name="translucent_60_pink">#80E43080</color>
+    <color name="translucent_80_black">#cc000000</color>
+    <color name="translucent_80_blue">#cc0375dc</color>
+    <color name="translucent_80_main_blue">#6600b7ee</color>
+    <color name="translucent_80_pink">#99E43080</color>
+    <color name="translucent_80_white">#ccffffff</color>
+    <color name="white">#ffffff</color>
+
 </resources>
