--- a/zy-frame/src/main/res/values/dimens.xml
+++ b/zy-frame/src/main/res/values/dimens.xml
@@ -12,4 +12,15 @@
     <dimen name="ZYFrame_progressbar_size">24dp</dimen>
     <dimen name="ZYFrame_radius">6dp</dimen>
 
+    <dimen name="snack_activity_horizontal_margin">18dp</dimen>
+    <dimen name="snack_activity_vertical_margin">16dp</dimen>
+    <dimen name="snack_icn_size">38dp</dimen>
+    <dimen name="snack_max_height">84dp</dimen>
+    <dimen name="snack_min_height">64dp</dimen>
+    <dimen name="snack_padding">26dp</dimen>
+    <dimen name="snack_padding_default">16dp</dimen>
+    <dimen name="snack_padding_small">4dp</dimen>
+    <dimen name="snack_text_medium">18sp</dimen>
+    <dimen name="snack_text_small">14sp</dimen>
+
 </resources>
