--- a/zy-frame/src/main/res/values/styles.xml
+++ b/zy-frame/src/main/res/values/styles.xml
@@ -1,6 +1,97 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <style name="loading_padding_style">
+        <item name="android:paddingTop">@dimen/ZYFrame_spacing</item>
+        <item name="android:paddingBottom">@dimen/ZYFrame_spacing</item>
+        <item name="android:paddingLeft">@dimen/ZYFrame_spacing_large</item>
+        <item name="android:paddingRight">@dimen/ZYFrame_spacing_large</item>
+    </style>
+
+    <style name="ActionSheetDialogAnimation" parent="@android:style/Animation.Dialog">
+        <item name="android:windowEnterAnimation">@anim/actionsheet_dialog_in</item>
+        <item name="android:windowExitAnimation">@anim/actionsheet_dialog_out</item>
+    </style>
+    <style name="ActionSheetDialogStyle" parent="@android:style/Theme.Dialog">
+
+        <!-- 背景透明 -->
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:windowContentOverlay">@null</item>
+        <!-- 浮于Activity之上 -->
+        <item name="android:windowIsFloating">true</item>
+        <!-- 边框 -->
+        <item name="android:windowFrame">@null</item>
+        <!-- Dialog以外的区域模糊效果 -->
+        <item name="android:backgroundDimEnabled">true</item>
+        <!-- 无标题 -->
+        <item name="android:windowNoTitle">true</item>
+        <!-- 半透明 -->
+        <item name="android:windowIsTranslucent">true</item>
+        <!-- Dialog进入及退出动画 -->
+        <item name="android:windowAnimationStyle">@style/ActionSheetDialogAnimation</item>
+    </style>
+    <style name="BottomDialog" parent="@style/Base.V7.Theme.AppCompat.Light.Dialog">
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+    </style>
+    <style name="BottomDialog.Animation" parent="Animation.AppCompat.Dialog">
+        <item name="android:windowEnterAnimation">@anim/translate_dialog_in</item>
+        <item name="android:windowExitAnimation">@anim/translate_dialog_out</item>
+    </style>
+    <style name="RxPicker.AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="colorPrimary">@color/picker_colorPrimary</item>
+        <item name="colorPrimaryDark">@color/picker_colorPrimaryDark</item>
+        <item name="colorAccent">@color/picker_colorAccent</item>
+    </style>
+    <style name="RxPicker.AppTheme.NoActionBar" parent="RxPicker.AppTheme">
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:fitsSystemWindows">false</item>
+    </style>
+    <style name="RxPicker.PopupAnimation" parent="android:Animation">
+        <item name="android:windowEnterAnimation">@anim/picker_fade_in</item>
+        <item name="android:windowExitAnimation">@anim/picker_fade_out</item>
+    </style>
+    <style name="RxPicker.ToolbarTheme" parent="RxPicker.AppTheme.NoActionBar">
+        <item name="titleTextColor">@color/picker_width</item>
+        <item name="android:textColorSecondary">@color/picker_width</item>
+        <item name="android:textColor">@color/picker_width</item>
+        <item name="android:background">@color/picker_colorPrimaryDark</item>
+    </style>
+    <style name="SnackStyle" parent="@android:style/Widget">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:minHeight">@dimen/snack_min_height</item>
+        <item name="android:maxHeight">@dimen/snack_max_height</item>
+        <item name="android:clickable">true</item>
+        <item name="android:gravity">top</item>
+        <item name="android:paddingTop">@dimen/snack_padding</item>
+        <item name="android:paddingBottom">@dimen/snack_padding</item>
+    </style>
+    <style name="SnackStyle.TextAppearance">
+        <!--<item name="android:fontFamily">sans-serif</item>-->
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:textSize">@dimen/snack_text_small</item>
+    </style>
+    <style name="SnackStyle.TextAppearance.Title">
+        le name="AlertStyle.TextAppearance.Title">
+        <item name="android:textSize">@dimen/snack_text_medium</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+    <style name="SnackTheme" parent="Base.Theme.AppCompat">
+        <item name="snackStyle">@style/SnackStyle</item>
+    </style>
+    <style name="Widget.SeekBar.Media" parent="@android:style/Widget.SeekBar">
+        <item name="android:indeterminateOnly">false</item>
+        <item name="android:indeterminateDrawable">
+            @android:drawable/progress_indeterminate_horizontal
+        </item>
+        <item name="android:thumb">@drawable/icon_thumb</item>
+
+        <item name="android:maxHeight">2.5dp</item>
+        <item name="android:minHeight">2.5dp</item>
+        <item name="android:progressDrawable">@drawable/video_progressbar</item>
+        <item name="android:thumbOffset">5dp</item>
+    </style>
     <style name="loading_dialog" parent="android:Theme.Dialog">
         <item name="android:windowIsFloating">true</item>
         <item name="android:windowIsTranslucent">false</item>
@@ -10,13 +101,6 @@
         <item name="android:windowAnimationStyle">@null</item>
         <item name="android:backgroundDimEnabled">true</item>
         <item name="android:backgroundDimAmount">0.4</item>
-    </style>
-
-    <style name="loading_padding_style">
-        <item name="android:paddingTop">@dimen/ZYFrame_spacing</item>
-        <item name="android:paddingBottom">@dimen/ZYFrame_spacing</item>
-        <item name="android:paddingLeft">@dimen/ZYFrame_spacing_large</item>
-        <item name="android:paddingRight">@dimen/ZYFrame_spacing_large</item>
     </style>
 
 </resources>
